# TinyLogSystem

./: CMakeLists.txt  LoggerTest.cpp  README.md
include/: AsyncLogging.h  FileUtility.h  LogFile.h  LogStream.h  Logger.h
output/: AsyncLogger  Logger  LoggerTest
src/: AsyncLogging.cpp  FileUtility.cpp  LogFile.cpp  LogStream.cpp  Logger.cpp
